# avahi-client-giomm

./: CMakeLists.txt  Client.hpp  EntryGroup.hpp  README.md  RecordBrowser.hpp  ServiceBrowser.hpp  ServiceResolver.hpp  Types.hpp
examples/: CMakeLists.txt  Reconfirm.cpp  RecordBrowser.cpp
impl/: Client.cpp  EntryGroup.cpp  RecordBrowser.cpp  ServiceBrowser.cpp  ServiceResolver.cpp
